fix overflow

--- a/assets/css/hoangminhtu_css/rewards.css
+++ b/assets/css/hoangminhtu_css/rewards.css
@@ -16,7 +16,7 @@ a {
 
 body {
     line-height: 1.5;
-    overflow-x: hidden;
+    overflow-y: hidden;
 }
 
 body, h1, h2, h3, h4, h5, h6, span, p {
